--- a/index.css
+++ b/index.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: Arial, sans-serif;
     display: flex;
@@ -7,13 +6,17 @@ body {
     height: 100vh;
     margin: 0;
     background-color: #f4f4f4;
+    overflow: hidden;
 }
 
-h1 {
-    font-size: 50px;
+#mediap {
+    color: red;
+    font-size: 20px;
+    font-weight: bolder;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 5px;
+    text-align: center;
 }
-
-
 
 #anofinalizado{
     display: none;
@@ -80,7 +83,7 @@ label[for="anofinalizado"] {
 
 label {
     display: block;
-    margin-bottom: 5px;
+    
 }
 
 input, select {
@@ -94,13 +97,4 @@ input, select {
 input[disabled] {
     background-color: #e9ecef;
 }
-input:invalid + span::after {
-    position: absolute;
-    content: "✖";
-    font-size: 10px;
-  }
-  
-  input:valid + span::after {
-    position: absolute;
-    content: "✓";
-  }
+
